[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svara"
version = "0.0.0"
description = "语音特征提取与声学表示工具箱（纯 NumPy/SciPy，离线可复现）"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rong Shengxue" }]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.scripts]
svara = "svara.cli:main"

[tool.setuptools.packages.find]
include = ["svara*"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["svara", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]
ignore = ["B905"]

[tool.ruff.lint.isort]
known-first-party = ["svara"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["svara"]

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
